--- a/mainpage.html
+++ b/mainpage.html
@@ -17,7 +17,7 @@
                 <ul class="nav-menu">
                     <li> <a href="#home">ABOUT</a> </li>
                     <li> <a href="#about">ROOM</a> </li>
-                    <li> <a href="#room">EVENT</a> </li>
+                    <li> <a href="rooms.html">EVENT</a> </li>
                     <li> <a href="#services">RESTAURANT</a> </li>
                 </ul>
             </div>
